# grocery_store

./: Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
grocery_store/: manage.py
grocery_store/api/: permissions.py  serializers.py  urls.py  views.py
grocery_store/grocery_store/: asgi.py  settings.py  urls.py  wsgi.py
grocery_store/products/: admin.py  models.py
grocery_store/products/migrations/: 0001_initial.py  0002_remove_product_image_productimage.py  0003_cart_amount.py
