[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grocery_store"
version = "0.0.1"
authors = [
    {name = "mign0n", email = "mign0n.git@gmail.com"},
]
description = "Продуктовый магазин."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12, <3.13"
dependencies = [
    "Django==5.0.7",
]

[project.optional-dependencies]
dev = [
    "black",
    "django-stubs",
    "django-stubs-ext",
    "flake8",
    "Flake8-pyproject",
    "flake8-annotations",
    "flake8-bugbear",
    "flake8-commas",
    "isort",
    "mypy",
    "mypy-extensions",
    "pymarkdownlnt",
    "pep8-naming",
]

[tool.black]
line-length = 79
skip-string-normalization = "true"

[tool.django-stubs]
django_settings_module = "grocery_store.settings"

[tool.flake8]
ignore = [
    "ANN101",
    "W503",
]
per-file-ignores = ["*/settings.py: E501"]
max-complexity = 10
max-line-length = 79
extend-exclude = [
    "venv/",
]

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
disable_error_code = ["var-annotated", "attr-defined"]
mypy_path = "grocery_store"

[tool.setuptools]
py-modules = []
